@@ -68,3 +68,5 @@ Hans-Peter Doerr <doerr@cip.physik.uni-freiburg.de>
 Ale <abernardi@icmab.es>
     for JEOL file information and samples.
 
+Antony Kikaxa <antony.kikaxa@gmail.com>
+    for NanoScanTech format 4D specifications
